--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,7 @@ before_script:
   - cd build
   # run cmake; here we assume that the project's
   # top-level CMakeLists.txt is located at '..'
-  - cmake ..
+  - cmake .. -DGenerate_DLL:BOOL="1" -DInstall_DLL:BOOL="1" 
 script:
   # once CMake has done its job we just build using make as usual
   - cmake --build . --config Release
-
-
-deploy:              # 部署
-  provider: releases # 部署到GitHub Release，除此之外，Travis CI还支持发布到fir.im、AWS、Google App Engine等
-  api_key: ${TOKEN}  # 填写GitHub的token （Settings -> Personal access tokens -> Generate new token）
-  #file: C:\Users\travis\build\liuchang0523\DirectoryUtils\build\source\Release\DirectoryUtils.exe   # 部署文件路径
-  skip_cleanup: true     # 设置为true以跳过清理,不然apk文件就会被清理
-  on:     # 发布时机           
-    tags: true       # tags设置为true表示只有在有tag的情况下才部署
