--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_script:
   - mkdir build
   # switch to build directory
   - cd build
+script:
   # run cmake; here we assume that the project's
   # top-level CMakeLists.txt is located at '..'
   - cmake .. -DGenerate_DLL:BOOL="1" -DInstall_DLL:BOOL="1" 
-script:
   # once CMake has done its job we just build using make as usual
-  - cmake --build . --config Release
+  #- cmake --build . --config Release
