--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ script:
   # top-level CMakeLists.txt is located at '..'
   - cmake .. -DGenerate_DLL:BOOL="1" #-DInstall_DLL:BOOL="1" 
   # once CMake has done its job we just build using make as usual
-  #- cmake --build . --config Release #编译
+  - cmake --build . --config Release #编译
   #- cmake --build . --target INSTALL --config Release #安装
