整理版本文件至version文件夹中，使源代码文件夹整洁

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,10 +1,5 @@
 if(Generate_DLL)
-    
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)#设置exe文件生成路径
-
-add_executable(${PROGRAM_NAME}Demo demo.cpp)
+add_executable(${PROGRAM_NAME}Demo demo.cpp ${RC_FILES})
 target_link_libraries(${PROGRAM_NAME}Demo  dll)
 set_target_properties(${PROGRAM_NAME}Demo PROPERTIES
         OUTPUT_NAME Demo)#设置程序名为Demo
