--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -13,15 +13,24 @@ if(USE_OPENCV)#如果需要包含第三方库
     target_link_libraries(exe ${OpenCV_LIBS})
 endif()
 
-OPTION(Generate_DLL "生成动态库" OFF)
+OPTION(Generate_DLL "生成动态库" ON)
 if(Generate_DLL)
     add_library(dll SHARED ${SRC_FILES} ${HEAD_FILES} ${RC_FILES})
     set_target_properties(dll PROPERTIES
         OUTPUT_NAME ${PROGRAM_NAME}Shared)#设置程序名为Project的名字
+IF (WIN32)
+IF(CMAKE_CL_64)
     install(TARGETS dll
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin)
+    ARCHIVE DESTINATION lib/win64
+    LIBRARY DESTINATION lib/win64
+    RUNTIME DESTINATION bin/win64)
+ELSE(CMAKE_CL_64)
+    install(TARGETS dll
+    ARCHIVE DESTINATION lib/x86
+    LIBRARY DESTINATION lib/x86
+    RUNTIME DESTINATION bin/x86)
+ENDIF(CMAKE_CL_64)
+ENDIF(WIN32)
 
 if(USE_OPENCV)
     target_link_libraries(dll ${OpenCV_LIBS})
