添加boost库的配置

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -13,6 +13,10 @@ if(USE_OPENCV)#如果需要包含第三方库
     target_link_libraries(exe ${OpenCV_LIBS})
 endif()
 
+if(USE_BOOST)#如果需要包含Boost
+target_link_libraries(exe ${Boost_LIBRARIES})
+endif(USE_BOOST)
+
 OPTION(Generate_DLL "生成动态库" ON)
 if(Generate_DLL)
     add_library(dll SHARED ${SRC_FILES} ${HEAD_FILES} ${RC_FILES})
