--- a/source/version/version.h.in
+++ b/source/version/version.h.in
@@ -24,7 +24,7 @@
 #define ${PROGRAM_NAME}_STRW_EXP(__A)   L#__A
 #define ${PROGRAM_NAME}_STRW(__A)       ${PROGRAM_NAME}_STRW_EXP(__A)
 
-#define VERSION     ${PROGRAM_NAME}_STR(${PROJECT_VERSION_MAJOR}) "." ${PROGRAM_NAME}_STR(${PROJECT_VERSION_MINOR}) "." ${PROGRAM_NAME}_STR(${PROJECT_VERSION_PATCH})
+#define VERSION     "Biometrics_" "${BUILDDATE}" "_v" ${PROGRAM_NAME}_STR(${PROJECT_VERSION_MAJOR}) "." ${PROGRAM_NAME}_STR(${PROJECT_VERSION_MINOR}) "." ${PROGRAM_NAME}_STR(${PROJECT_VERSION_PATCH})
 
 
 #endif // ___VERSION_H__
