添加编译时选项，开启Visual studio的并行编译

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.5)
 set(Progject_Name "Test" CACHE STRING "设置工程文件名")
-project(${Progject_Name} VERSION 1.1.0 LANGUAGES CXX C)#工程名
+project(${Progject_Name} VERSION 1.1.1 LANGUAGES CXX C)#工程名
 
 #设置默认install位置
 set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Installation Directory" FORCE)
 message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
 
 set(CMAKE_CXX_STANDARD 11) #设置C++11开启
+add_compile_options(/MP)#开启Visual studio的并行编译
 
 OPTION(USE_OPENMP "使用OpenMP加速" OFF)
 if (USE_OPENMP)
